# myanmar-economic-monitor

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  README.html  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh-pages.yml
_sources/notebooks/airpollution/: air_pollution.ipynb
_sources/notebooks/conflict/: conflict-and-ntl-updated.ipynb
_sources/notebooks/nighttime-lights/analysis-2023/: README.md
_sources/notebooks/nighttime-lights/collection-2/: ntl-gdp.ipynb
docs/: 3-add-resources.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  _config.yml  _toc.yml  bibliography.bib  data-products.html  data.html  data.md  foundational_datasets_and_data_products.html  introduction-to-data-goods.md  introduction_to_data_goods.html  sample-indicators.html  sample-indicators.md  team.html  team.md
notebooks/: world-bank-api.html  world-bank-package.html
notebooks/airpollution/: README.md  air_pollution.html  air_pollution.ipynb  no2-analysis.html  no2-analysis.ipynb  pollution.ipynb
notebooks/conflict/: acled-classification.ipynb  acled.html  acled.ipynb  conflict-and-ntl-updated.html  conflict-and-ntl-updated.ipynb  conflict-and-ntl.html  conflict-and-ntl.ipynb
notebooks/methane/: Readme.MD  data-download.ipynb  methane-analysis.ipynb  myanmar_ch4_plumes.csv
notebooks/mobility/: README.html  activity.html  bar_plot.html  mobility.html  mobility.ipynb  mobility.qmd  test.ipynb
notebooks/new-construction-activity/: myanmar_damConstruction_tracking.ipynb  new-construction.html  new-construction.md
notebooks/nighttime-lights/: README.html
notebooks/nighttime-lights/analysis-2023/: 01_clean_gas_flaring_data.R  01_download_wdi.R  02_download_black_marble.R  03_aggregate.R  04_append.R  05_adm1_trends.R  05_data_for_workbook.R  05_export_data.R  05_gas_flare_trends.R  05_gas_flaring_map.R  05_gdp_vs_ntl_annual.R  05_gdp_vs_ntl_quarterly.R  05_map_ntl_annual_separate.R  05_map_ntl_annual_together.R  05_pc_2019_maps.R  05_sez_trends.R  README.html  _05_adm_trends.R  _main.R
notebooks/nighttime-lights/analysis-2024/: .Rhistory  README.html  README.md  _main.R
notebooks/nighttime-lights/analysis-2024-q4/: .Rhistory  nighttime_lights.qmd
notebooks/nighttime-lights/analysis-2024/01_process_data/: 01_clean_gas_flaring_2023.R  02_download_ntl.R  03_aggregate.R  04_append.R
notebooks/nighttime-lights/analysis-2024/02_analysis/: annual_trends.R  ntl_analysis.html  ntl_analysis.qmd  ntl_summary.qmd  rwi_analysis.R
notebooks/nighttime-lights/analysis-2024/02_analysis/ntl_analysis_files/libs/bootstrap/: bootstrap-icons.css
notebooks/nighttime-lights/analysis-2024/02_analysis/ntl_analysis_files/libs/leaflet-1.3.1/: leaflet.js
notebooks/nighttime-lights/analysis-2025/: earthquake_ntl.html  earthquake_ntl.ipynb  extraction.py  process_viirs.py  viirs_process_simple.py  zonal_stats.py
notebooks/nighttime-lights/collection-2/: ntl-gdp.html  ntl-gdp.ipynb  ntl_collection2.html  ntl_collection2.ipynb  raster_visuals.py  utils.py  visuals.py
notebooks/rainfall/: chirps_rainfall_extraction.ipynb
notebooks/relative-wealth/: relative-wealth-index.html  relative-wealth-index.ipynb
notebooks/sample-indicators/: sagaing-story.html  sagaing-story.ipynb
notebooks/vegetation-conditions/: README.html  README.md  Seasonality_Parameters_Data_Extraction.md  evi-manufacturing-analysis.html  evi-manufacturing-analysis.ipynb  evi-report.html  evi-report.ipynb  gee-batch-export-mxd13q1.js  modis_viproducts.py
reports/: myanmar-economic-monitor-strategic-brief.html  myanmar-economic-monitor-strategic-brief.md
reports/figures/: reg_gdp_ntl.html  reg_gdp_ntl_quarterly.html
src/myanmar-economic-monitor/: run_rainfall_extraction.py
(+6 files in other folders)
