[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "myanmar-economic-monitor"
description = "Support for the Myanmar Economic Monitor"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["nighttime lights", "black marble", "world bank"]
authors = [{ name = "World Bank Data Lab", email = "datalab@worldbank.org" }]
maintainers = [
	{ name = "Robert Marty", email = "rmarty@worldbank.org" },
	{ name = "Sahiti Sarva", email = "ssarva@worldbank.org" },
	{ name = "Gabriel Stefanini Vicente", email = "gvicente@worldbank.org" },
]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
docs = [
	"docutils==0.17.1",     # Pin to avoid compatibility issues
	"sphinx>=4.0,<6.0",     # Pin Sphinx to compatible version range
	"jupyter-book>=0.15.1,<0.16.0",  # Pin to stable version range
	"myst-parser>=0.18.0",  # Ensure MyST parser compatibility
	"sphinx-book-theme>=0.3.3",  # Pin theme version
]

[project.urls]
"Homepage" = "https://datapartnership.github.io/myanmar-economic-monitor"
"Bug Reports" = "https://github.com/datapartnership/myanmar-economic-monitor/issues"
"Source" = "https://github.com/datapartnership/myanmar-economic-monitor"

[tool.codespell]
skip = 'docs/_build,docs/references.bib,*.py,*.R,*.png,*.gz,*.whl'
ignore-words-list = "gost"
ignore-regex = '^\s*"image\/png":\s.*'

[tool.hatch.build.targets.wheel]
packages = ["src/myanmar-economic-monitor"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
